# shopman-guestman

./: README.md  conftest.py  guestman_test_settings.py  guestman_test_urls.py  pyproject.toml
shopman/guestman/: __init__.py  admin.py  apps.py  conf.py  exceptions.py  gates.py  utils.py
shopman/guestman/adapters/: __init__.py  doorman.py  omniman.py
shopman/guestman/api/: filters.py  serializers.py  urls.py  views.py
shopman/guestman/contrib/: __init__.py
shopman/guestman/contrib/admin_unfold/: __init__.py  admin.py  apps.py
shopman/guestman/contrib/consent/: __init__.py  admin.py  apps.py  models.py  service.py
shopman/guestman/contrib/identifiers/: __init__.py  admin.py  apps.py  models.py  service.py
shopman/guestman/contrib/insights/: __init__.py  admin.py  apps.py  conf.py  models.py  service.py
shopman/guestman/contrib/loyalty/: __init__.py  admin.py  apps.py  conf.py  models.py  service.py
shopman/guestman/management/: __init__.py
shopman/guestman/migrations/: 0001_initial.py
shopman/guestman/models/: __init__.py  address.py  contact_point.py  customer.py  external_identity.py  group.py  processed_event.py
shopman/guestman/protocols/: __init__.py  customer.py  orders.py
shopman/guestman/services/: __init__.py  address.py  customer.py
shopman/guestman/signals/: __init__.py
shopman/guestman/tests/: __init__.py  conftest.py  test_api.py  test_crm_features.py  test_hardening.py  test_insights_service.py  test_loyalty_service.py  test_manychat.py  test_manychat_resolver.py  test_merge.py  test_models.py  test_services.py  urls.py
(+30 files in other folders)
